<resources>
    <string name="app_name">Tip Time</string>
    <string name="cost_of_services">Cost of Service</string>
    <string name="required_msg">Required*</string>
    <string name="how_was_the_service">How was the Service?</string>
    <string name="amazing_service">Amazing (20%)</string>
    <string name="good_service">Good (18%)</string>
    <string name="ok_service">Okay (15%)</string>
    <string name="round_up_tip">Round up tip?</string>
    <string name="calculate">Calculate</string>
    <string name="tip_amount">Tip Amount :</string>
    <string name="tip_head">Tip Time </string>
</resources>